--- a/lab2_ex1.ipynb
+++ b/lab2_ex1.ipynb
@@ -366,18 +366,18 @@
         "# predicted labels for all test samples\n",
         "predictedManual = np.zeros(testLabels.size, dtype=int)\n",
         "\n",
-        "for ti, testX in enumerate(testData):\n",
+        "for i, testData0 in enumerate(testData):\n",
         "    best_dist = 1e9\n",
         "    best_label = None\n",
         "\n",
-        "    # compute distance to every training sample\n",
-        "    for trI, trainX in enumerate(trainData):\n",
-        "        dis = vecDist(testX, trainX)\n",
+        "    # calculate distance to every training sample\n",
+        "    for j, trainData0 in enumerate(trainData):\n",
+        "        dis = vecDist(testData0, trainData0)\n",
         "        if dis < best_dist:\n",
         "            best_dist = dis\n",
-        "            best_label = trainLabels[trI]\n",
+        "            best_label = trainLabels[j]\n",
         "\n",
-        "    predictedManual[ti] = best_label\n",
+        "    predictedManual[i] = best_label\n",
         "\n",
         "predictedManual\n"
       ],
@@ -1022,7 +1022,7 @@
       "source": [
         "###Did you get similar results? Explain your answer.\n",
         "\n",
-        "Yes we got similar results.."
+        "Yes we got similar results.. because 2 to 3"
       ],
       "metadata": {
         "id": "WzoXPvdXlrZ6"
