--- a/lab2_ex1.ipynb
+++ b/lab2_ex1.ipynb
@@ -386,7 +386,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Em7xZCaXinfW",
-        "outputId": "7d2d6171-1b84-453b-dd25-723864318265"
+        "outputId": "0066a0b3-da84-4af7-a5f0-c6d6665ae0a8"
       },
       "execution_count": 10,
       "outputs": [
@@ -401,6 +401,34 @@
           },
           "metadata": {},
           "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "testLabels"
+      ],
+      "metadata": {
+        "id": "NapONrRIfoi_",
+        "outputId": "0b135f56-39ac-40ae-d864-3b95c9fddb87",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2,\n",
+              "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3,\n",
+              "       3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
         }
       ]
     },
@@ -421,7 +449,7 @@
       "metadata": {
         "id": "adJXAYcGioFi"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -434,9 +462,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T5jdlNmtk7sb",
-        "outputId": "8ceaf30b-b1ae-4f19-8000-e11f437bc255"
+        "outputId": "549db6e7-ef81-459b-d533-1a88b1ce5578"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -446,7 +474,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 13
         }
       ]
     },
@@ -478,9 +506,9 @@
           "height": 80
         },
         "id": "Mgaufs0CgfhI",
-        "outputId": "78415232-72ce-47f5-8836-3c561fe695a8"
+        "outputId": "0290a93c-3658-404a-82b5-92fb6749f45a"
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -908,7 +936,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 14
         }
       ]
     },
@@ -921,7 +949,7 @@
       "metadata": {
         "id": "YOLyTVuDfF5O"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -934,9 +962,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DalJfVukg0av",
-        "outputId": "ab9adb31-cdb0-4822-c1c0-ac79b328046c"
+        "outputId": "3548e0dd-72c9-4277-d4a6-6e4c48daac9b"
       },
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -948,7 +976,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 16
         }
       ]
     },
@@ -962,9 +990,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zNBQsXrAg3o9",
-        "outputId": "8fa4f566-2897-4c7c-d7eb-e7f4176eeb7a"
+        "outputId": "102d1209-e698-45c0-f901-846f1ce97c86"
       },
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -976,7 +1004,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 17
         }
       ]
     },
@@ -988,7 +1016,7 @@
       "metadata": {
         "id": "uU4bVp4zhDH1"
       },
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1001,9 +1029,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ltmeO4EuhWdf",
-        "outputId": "deef0732-0438-4d5b-a087-b89bd09bcdbe"
+        "outputId": "456f759a-da68-4742-db04-3776c5b361c6"
       },
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1013,7 +1041,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 19
         }
       ]
     },
@@ -1022,7 +1050,23 @@
       "source": [
         "###Did you get similar results? Explain your answer.\n",
         "\n",
-        "Yes we got similar results.. because 2 to 3"
+        "Yes we got similar results both of them we got 2 errors.\n",
+        "\n",
+        "Manual KNN result:\n",
+        "in sample 24:  we got flower type 2 instead of type 3\n",
+        "in sample 44:  we got flower type 3 instead of type 2\n",
+        "\n",
+        "built-in KNN:\n",
+        "in sample 24:  we got flower type 3 instead of type 2\n",
+        "in sample 44:  we got flower type 2 instead of type 3\n",
+        "\n",
+        "why?\n",
+        "Its regular because how KNN works it looks for the closest point and attach it to the same\n",
+        "type of it, in our case we have points from type 2 that located in between point 3.\n",
+        "and the same for type 3 that located in between type 2.\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "WzoXPvdXlrZ6"
