--- a/lab3_ex1.ipynb
+++ b/lab3_ex1.ipynb
@@ -36,7 +36,7 @@
       "metadata": {
         "id": "JZ-BUBW7n6xa"
       },
-      "execution_count": 3,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -53,7 +53,7 @@
       "metadata": {
         "id": "gWMpvhX6n6uu"
       },
-      "execution_count": 4,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -70,7 +70,7 @@
       "metadata": {
         "id": "r-RU0VXCn6sB"
       },
-      "execution_count": 5,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -94,7 +94,7 @@
       "metadata": {
         "id": "Z4jTb5lMn6pc"
       },
-      "execution_count": 6,
+      "execution_count": 90,
       "outputs": []
     },
     {
@@ -112,7 +112,7 @@
       "metadata": {
         "id": "QPAcaH7qn6mw"
       },
-      "execution_count": 7,
+      "execution_count": 91,
       "outputs": []
     },
     {
@@ -132,7 +132,7 @@
       "metadata": {
         "id": "7a56UQcNoQ-q"
       },
-      "execution_count": 8,
+      "execution_count": 92,
       "outputs": []
     },
     {
@@ -142,23 +142,25 @@
         "#read  and preprocess files\n",
         "books+= [readFile('DB.txt')]\n",
         "books+= [readFile('Eliot.txt')]\n",
-        "books+= [readFile('HP.txt')]"
+        "books+= [readFile('HP.txt')]\n",
+        "books+= [readFile('Tolkien.txt')]\n",
+        "books+= [readFile('xxx.txt')]"
       ],
       "metadata": {
         "id": "-Dm1gm3OoQ8F"
       },
-      "execution_count": 9,
+      "execution_count": 93,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "window = 200000"
+        "window = 150000"
       ],
       "metadata": {
         "id": "AGuA1zpvoQ5Z"
       },
-      "execution_count": 10,
+      "execution_count": 94,
       "outputs": []
     },
     {
@@ -174,7 +176,7 @@
       "metadata": {
         "id": "t9SSIjAloU7G"
       },
-      "execution_count": 11,
+      "execution_count": 95,
       "outputs": []
     },
     {
@@ -183,12 +185,25 @@
         "# preprocess texts in book parts\n",
         "texts = []\n",
         "for text in bookParts:\n",
-        "    texts += [preProcess(text)]"
+        "\n",
+        "    # 1. your existing preprocess\n",
+        "    p = preProcess(text)\n",
+        "\n",
+        "    # 6. remove words of length 1 or 2 (using regex)\n",
+        "    # \\b : word boundary\n",
+        "    # [a-zA-Z]{1,2} : any 1 or 2 letter word\n",
+        "    # \\s+ : optional whitespace cleanup\n",
+        "    p = re.sub(r'\\b[a-zA-Z]{1,2}\\b', '', p)\n",
+        "\n",
+        "    # clean double spaces caused by removals\n",
+        "    p = re.sub(r'\\s+', ' ', p).strip()\n",
+        "\n",
+        "    texts.append(p)\n"
       ],
       "metadata": {
         "id": "P2Fqrop4oUyi"
       },
-      "execution_count": 12,
+      "execution_count": 96,
       "outputs": []
     },
     {
@@ -200,7 +215,7 @@
       "metadata": {
         "id": "Mupvf2ujoYLz"
       },
-      "execution_count": 13,
+      "execution_count": 97,
       "outputs": []
     },
     {
@@ -212,7 +227,7 @@
       "metadata": {
         "id": "9SrXG7gRoYDe"
       },
-      "execution_count": 14,
+      "execution_count": 98,
       "outputs": []
     },
     {
@@ -226,9 +241,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "96bee1b7-57ef-489d-fd30-f30d42f5915b"
+        "outputId": "1060470e-36db-46eb-b8f3-33c2db1f9529"
       },
-      "execution_count": 15,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,20 +254,27 @@
             "text2\n",
             "text3\n",
             "text4\n",
-            "text5\n"
+            "text5\n",
+            "text6\n",
+            "text7\n",
+            "text8\n",
+            "text9\n",
+            "text10\n",
+            "text11\n",
+            "text12\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 100,
       "metadata": {
         "id": "-OBJg5O_n3gj",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cdaac85d-ff1f-451b-efc2-f41e2eb90bae"
+        "outputId": "135f79ae-47e7-43cd-fcf5-6ff9fedba1cd"
       },
       "outputs": [
         {
@@ -260,12 +282,32 @@
           "name": "stdout",
           "text": [
             "dist matrix = \n",
-            " [[   0.  996. 2287. 2129. 2402. 2193.]\n",
-            " [ 996.    0. 2154. 1990. 2316. 2079.]\n",
-            " [2287. 2154.    0.  838. 2223. 2098.]\n",
-            " [2129. 1990.  838.    0. 2005. 1914.]\n",
-            " [2402. 2316. 2223. 2005.    0.  870.]\n",
-            " [2193. 2079. 2098. 1914.  870.    0.]]\n"
+            " [[   0.  611.  703. 1098. 1024. 1025. 1343. 1309. 1264. 1130. 1221. 1197.\n",
+            "  1296.]\n",
+            " [ 611.    0.  534. 1093. 1000. 1000. 1310. 1289. 1236. 1097. 1180. 1158.\n",
+            "  1269.]\n",
+            " [ 703.  534.    0. 1097. 1006. 1014. 1355. 1327. 1272. 1124. 1222. 1204.\n",
+            "  1305.]\n",
+            " [1098. 1093. 1097.    0.  520.  519. 1273. 1211. 1175.  949. 1054. 1034.\n",
+            "  1187.]\n",
+            " [1024. 1000. 1006.  520.    0.  477. 1210. 1167. 1110.  893. 1023.  995.\n",
+            "  1134.]\n",
+            " [1025. 1000. 1014.  519.  477.    0. 1207. 1155. 1103.  889.  997.  960.\n",
+            "  1123.]\n",
+            " [1343. 1310. 1355. 1273. 1210. 1207.    0.  592.  646. 1297. 1298. 1260.\n",
+            "   568.]\n",
+            " [1309. 1289. 1327. 1211. 1167. 1155.  592.    0.  652. 1252. 1272. 1246.\n",
+            "   419.]\n",
+            " [1264. 1236. 1272. 1175. 1110. 1103.  646.  652.    0. 1190. 1212. 1176.\n",
+            "   380.]\n",
+            " [1130. 1097. 1124.  949.  893.  889. 1297. 1252. 1190.    0.  677.  667.\n",
+            "  1226.]\n",
+            " [1221. 1180. 1222. 1054. 1023.  997. 1298. 1272. 1212.  677.    0.  530.\n",
+            "  1253.]\n",
+            " [1197. 1158. 1204. 1034.  995.  960. 1260. 1246. 1176.  667.  530.    0.\n",
+            "  1219.]\n",
+            " [1296. 1269. 1305. 1187. 1134. 1123.  568.  419.  380. 1226. 1253. 1219.\n",
+            "     0.]]\n"
           ]
         }
       ],
@@ -281,6 +323,32 @@
         "        dist[i,j] = round(vecDist(wordFreq[i],wordFreq[j]))\n",
         "\n",
         "print(\"dist matrix = \\n\",dist)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(books[-3])//window   #HP book"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m6k2QrSpopFv",
+        "outputId": "fb1b31e0-22ab-4fdf-ae30-72d50489e252"
+      },
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 104
+        }
       ]
     }
   ]
